--- a/.github/workflows/rootfs_build.yaml
+++ b/.github/workflows/rootfs_build.yaml
@@ -145,7 +145,10 @@ jobs:
           
           FILE_PATH=$(find $IMGDIR -type f -name "*.tar.gz" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
           sudo cp -v ${IMGDIR}/BigLinux-ARM-$ARCH-latest.tar.gz .
-
+          sudo chown $USER:$USER $FILE_PATH
+          
+          ls -lasih
+          
           echo "FILE_PATH=$(basename $FILE_PATH)" >> $GITHUB_ENV
           
       - name: Release assets
