--- a/.github/workflows/rootfs_build.yaml
+++ b/.github/workflows/rootfs_build.yaml
@@ -147,8 +147,6 @@ jobs:
           FILE_PATH=$(find $IMGDIR -type f -name "*.tar.gz" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
           sudo cp -v ${IMGDIR}/BigLinux-ARM-$ARCH-latest.tar.gz .
           
-          sudo chown $USER:$USER $FILE_PATH
-          
           ls -lh
           
           echo "FILE_PATH=$(basename $FILE_PATH)" >> $GITHUB_ENV
@@ -164,8 +162,8 @@ jobs:
           prerelease: false
           files: |
             ${{ env.FILE_PATH }}
-
-      - name: Tmate if failure
+            
+      # - name: Tmate if failure
       #   if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      #   uses: mxschmitt/action-tmate@v3
           
