--- a/action.yml
+++ b/action.yml
@@ -239,7 +239,7 @@ runs:
     #     ${{ inputs.img-name }}
     
     - name: checkout-arm-profiles
-      if: ${{ inputs.type }} = 'package'
+      if: "${{ inputs.type == 'package' }}"
       shell: bash
       env:
         REPO: ${{ inputs.arm-profiles-repo }}
@@ -252,7 +252,7 @@ runs:
     #   uses: mxschmitt/action-tmate@v3
         
     - id: build
-      if: ${{ inputs.type }} = 'package'
+      if: "${{ inputs.type == 'package' }}"
       shell: bash
       env:
         DEVICE: ${{ inputs.device }}
