--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -1,6 +1,5 @@
 name: Build ARM Package
 
-# Controls when the workflow will run
 on:
   repository_dispatch:
     types:
@@ -18,7 +17,7 @@ jobs:
         run: |
           echo "url: ${{ github.event.client_payload.url }}"
           echo "branch: ${{ github.event.client_payload.branch }}"
-          echo "extrarepo: ${{ github.event.client_payload.extrarepo }}"
+          # echo "extrarepo: ${{ github.event.client_payload.extrarepo }}"
           echo "branch_build: ${{ github.event.client_payload.branch_build }}"
           
           if [ -z "${{ github.event.client_payload.branch_build }}" ];then
@@ -33,12 +32,12 @@ jobs:
         id: makepkg
         uses: BigLinux-Package-Build/build-iso-arm@main
         with:
-          package: pkgbuild
           branch: ${{ env.branch_build }}
           gitbranch: ${{ github.event.client_payload.branch }}
           gpg-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: ${{ secrets.PASSPHRASE }}
-          extrarepo: ${{ github.event.client_payload.extrarepo }}
+          # extrarepo: ${{ github.event.client_payload.extrarepo }}
+          type: package
           
       # # Tmate ##
       # - name: Setup tmate session
@@ -75,33 +74,28 @@ jobs:
             find -iname "*$i" -exec gh release upload ${release} --repo ${repo} --clobber {} \;
           done
        
-      - name: Push to Repo
-        shell: bash
-        run: |
-          echo "## ssh setup"
-          mkdir -p /home/runner/.ssh
-          touch /home/runner/.ssh/github_actions
-          chmod 600 /home/runner/.ssh/github_actions
-          #ssh-agent -a /tmp/ssh_agent.sock > /dev/null
-          echo "${{ secrets.PKGBUILD_KEY }}" >> /home/runner/.ssh/github_actions
-          eval `ssh-agent -s`
-          ssh-add /home/runner/.ssh/github_actions
-          ssh-keyscan -t rsa -p ${{ secrets.PKGBUILD_PORT }} ${{ secrets.PKGBUILD_HOST }} >> /home/runner/.ssh/known_hosts
-          
-          gitfolder=$(find -type f -name PKGBUILD | sed 's/PKGBUILD//')
-          cd $gitfolder
-          ls -lh
-          if [ -n "$(echo ${{ github.event.client_payload.branch }} | grep stable )" ];then branch=stable; else branch=testing; fi
-          for i in *.zst *.sig *.md5; do
-          test -e $i && rsync -vapz -e "ssh -p ${{ secrets.PKGBUILD_PORT }}" $i ${{ secrets.PKGBUILD_USER }}@${{ secrets.PKGBUILD_HOST }}:${{ secrets.PKGBUILD_DIR }}/$branch
-          sleep 10
-          done
-          exit 0
-          
-      #- name: Telegram Alert End
-        #shell: bash
-        #run: |
-          #curl -X POST -H 'Content-Type: application/json' -d '{"chat_id": "${{ secrets.CHAT_ID }}", "text": "Pacote: ${{ github.event.action }} criado e enviado a partir do branch ${{ github.ref_name }}", "disable_notification": true}' ${{ secrets.MESSAGE_BOT_KEY }}
+#       - name: Push to Repo
+#         shell: bash
+#         run: |
+#           echo "## ssh setup"
+#           mkdir -p /home/runner/.ssh
+#           touch /home/runner/.ssh/github_actions
+#           chmod 600 /home/runner/.ssh/github_actions
+#           #ssh-agent -a /tmp/ssh_agent.sock > /dev/null
+#           echo "${{ secrets.PKGBUILD_KEY }}" >> /home/runner/.ssh/github_actions
+#           eval `ssh-agent -s`
+#           ssh-add /home/runner/.ssh/github_actions
+#           ssh-keyscan -t rsa -p ${{ secrets.PKGBUILD_PORT }} ${{ secrets.PKGBUILD_HOST }} >> /home/runner/.ssh/known_hosts
+#           
+#           gitfolder=$(find -type f -name PKGBUILD | sed 's/PKGBUILD//')
+#           cd $gitfolder
+#           ls -lh
+#           if [ -n "$(echo ${{ github.event.client_payload.branch }} | grep stable )" ];then branch=stable; else branch=testing; fi
+#           for i in *.zst *.sig *.md5; do
+#           test -e $i && rsync -vapz -e "ssh -p ${{ secrets.PKGBUILD_PORT }}" $i ${{ secrets.PKGBUILD_USER }}@${{ secrets.PKGBUILD_HOST }}:${{ secrets.PKGBUILD_DIR }}/$branch
+#           sleep 10
+#           done
+#           exit 0
           
       - name: Telegram Alert Fail
         # if: ${{ failure() || cancelled() }}
