--- a/action.yml
+++ b/action.yml
@@ -381,7 +381,7 @@ runs:
         gitfolder=$(find -type f -name PKGBUILD | sed 's/PKGBUILD//')
         cd $gitfolder
         for p in $(find $PWD -maxdepth 1 -regex '.*\.pkg\.tar\.\(xz\|zst\)'); do
-          gpg --pinentry-mode loopback --passphrase "${{ inputs.gpg-passphrase }}" --detach-sign ${p}
+          sudo gpg --pinentry-mode loopback --passphrase "${{ inputs.gpg-passphrase }}" --detach-sign ${p}
         done
     - name: CheckSum
       if: "${{ inputs.type == 'package' }}"
@@ -391,8 +391,8 @@ runs:
         gitfolder=$(find -type f -name PKGBUILD | sed 's/PKGBUILD//')
         cd $gitfolder
         echo '#!/bin/bash
-        for i in $(ls *.zst); do md5sum $i >> $i.md5; done
-        for i in $(ls *.sig | sed 's/.sig//'); do md5sum $i.sig >> $i.md5; done
+        for i in $(ls *.zst); do md5sum $i | sudo tee -a $i.md5; done
+        for i in $(ls *.sig | sed 's/.sig//'); do md5sum $i.sig | sudo tee -a $i.md5; done
         exit 0' > md5.sh
         bash md5.sh
         
