tmate workflow_dispatch teste 02

--- a/.github/workflows/rpi4-matrix.yaml
+++ b/.github/workflows/rpi4-matrix.yaml
@@ -47,8 +47,8 @@ jobs:
           branch: ${{ matrix.branch }}
           version: ${{ steps.time.outputs.time }}
           type: image
-          tmate: true
-            if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
+          tmate: ${{ github.event_name }}
+          # if: ${{ github.event_name }}== 'workflow_dispatch' && inputs.debug_enabled }}
           # overlay-repo: https://repo.biglinux.com.br/stable/$arch/biglinux-stable.db
           #gpg-key: ${{ secrets.CI_GPG_SECRET }}
           #gpg-passphrase: ${{ secrets.CI_GPG_PASSPHRASE }}
