--- a/action.yml
+++ b/action.yml
@@ -245,22 +245,22 @@ runs:
         #add biglinux repo
         # sudo sed -i '/\[core\]/{h;s/.*/\[biglinux-update-stable\]/;p;x;}' /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
         # sudo sed -i '/\[core\]/{h;s/.*/SigLevel = PackageRequired/;p;x;}' /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
-        # sudo sed -i '/\[core\]/{h;s/.*/Server = https:\/\/repo.biglinux.com.br\/update-stable\/$arch/;p;x;}' /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
+        # sudo sed -i '/\[core\]/{h;s/.*/Server = https:\/\/repo.biglinux.com.br\/update-stable\/aarch64/;p;x;}' /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
         # sudo sed -i '/\[core\]/{h;s/.*//;p;x;}' /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
         
         if [ "${{ inputs.gitbranch }}" = "testing" ];then
         echo '
-        [biglinux-testing]
-        # SigLevel = PackageRequired
-        SigLevel = Optional TrustAll
-        Server = https://repo.biglinux.com.br/testing/$arch' | tee -a sudo /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
+        # [biglinux-testing]
+        # # SigLevel = PackageRequired
+        # SigLevel = Optional TrustAll
+        # Server = https://repo.biglinux.com.br/testing/$arch' | tee -a sudo /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
         fi
         
         echo '
         [biglinux-stable]
         # SigLevel = PackageRequired
         SigLevel = Optional TrustAll
-        Server = https://repo.biglinux.com.br/stable/$arch' | tee -a sudo /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
+        Server = https://repo.biglinux.com.br/stable/aarch64' | tee -a sudo /usr/share/manjaro-arm-tools/lib/pacman.conf.aarch64
         
         
         # sudo sed -i 's/BOOT_MNJRO/BOOT_BIGARM/' share/manjaro-arm-tools/lib/functions.sh
