--- a/.github/workflows/rpi4-matrix.yaml
+++ b/.github/workflows/rpi4-matrix.yaml
@@ -70,6 +70,6 @@ jobs:
             ${{ env.FILE_PKG }}
             #${{ env.FILE_SIG }}
             
-      - name: Tmate if failure
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      # - name: Tmate if failure
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3
